--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1050,7 +1050,7 @@
     top: -12px;
   }
   .others-option-for-responsive .option-inner .others-option .dot-menu :hover .inner .circle {
-    background-color: #ff8c00;
+    background-color: #07a6d0;
   }
   .others-option-for-responsive .option-inner .others-option .option-item {
     padding: 0;
@@ -1211,17 +1211,17 @@
     margin-top: 70px;
   }
   .mean-container .mean-nav ul li a:hover {
-    color: #ff8c00;
+    color: #07a6d0;
   }
   .mean-container .mean-nav ul li a.active {
-    color: #ff8c00;
+    color: #07a6d0;
   }
   .mean-container a.meanmenu-reveal {
     padding: 23px 15px 0 0;
-    color: #ff8c00;
+    color: #07a6d0;
   }
   .mean-container a.meanmenu-reveal span {
-    background-color: #ff8c00;
+    background-color: #07a6d0;
     position: relative;
     top: 8px;
     margin-top: -5px;
@@ -1245,7 +1245,7 @@
     margin-left: 15px;
   }
   .others-option-for-responsive .option-inner .others-option .dot-menu:hover .inner .circle {
-    background-color: #ff8c00;
+    background-color: #07a6d0;
   }
   .others-option-for-responsive .option-inner .others-option .option-item {
     padding: 0;
